🔧 Fix Vercel configuration - Remove conflicting routes section - Use modern cleanUrls and trailingSlash properties

--- a/vercel.json
+++ b/vercel.json
@@ -18,12 +18,8 @@
       "use": "@vercel/static"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/$1"
-    }
-  ],
+  "cleanUrls": true,
+  "trailingSlash": false,
   "headers": [
     {
       "source": "/(.*)",
