🔧 Fix map fullscreen error and update config for GitHub safety - Remove hardcoded API key from config.js - Fix fullscreenControl.addTo error in map initialization - Update env.example with proper template - Simplify chatbot UI and remove unnecessary elements - All changes are now safe for GitHub

--- a/env.example
+++ b/env.example
@@ -1,14 +1,13 @@
-# Configurazione API Keys per Ugliano Spearfishing App
-# Copia questo file in .env e inserisci le tue chiavi API
+# Configurazione ambiente per Ugliano Spearfishing App
+# Copia questo file come .env e compila con i tuoi valori
 
-# API Meteo (opzionali - l'app funziona anche senza)
-OPENWEATHER_API_KEY=your_openweather_api_key_here
-WEATHERAPI_KEY=your_weatherapi_key_here
-
-# API AI Assistant (opzionale)
+# Claude AI API Key (obbligatoria per l'assistente AI)
 CLAUDE_API_KEY=your_claude_api_key_here
 
+# Porta del server proxy (opzionale, default: 3000)
+PORT=3000
+
 # Note:
-# - Il file .env è già incluso in .gitignore
-# - L'app usa API gratuite come Open-Meteo che non richiedono chiavi
-# - Le chiavi API migliorano la precisione ma non sono necessarie
+# - Non committare mai il file .env su GitHub
+# - Per deployment su Vercel, imposta CLAUDE_API_KEY nelle variabili d'ambiente del progetto
+# - Per sviluppo locale, crea un file .env basato su questo template
